apache_jira_description_comments/GEODE-7239_description.txt
The following classes in geode-core src/test should be rewritten to not use log4j-core:
* ColocationHelperTest
* GfshInitFileJUnitTest
* ShowMissingDiskStoresFunctionJUnitTest

{noformat}
> Task :geode-core:compileTestJava
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/internal/cache/ColocationHelperTest.java:26: error: package org.apache.logging.log4j.core does not exist
import org.apache.logging.log4j.core.Appender;
                                    ^
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/internal/cache/ColocationHelperTest.java:27: error: package org.apache.logging.log4j.core does not exist
import org.apache.logging.log4j.core.LogEvent;
                                    ^
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/internal/cache/ColocationHelperTest.java:28: error: package org.apache.logging.log4j.core does not exist
import org.apache.logging.log4j.core.Logger;
                                    ^
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/internal/cache/ColocationHelperTest.java:50: error: cannot find symbol
  private Logger logger;
          ^
  symbol:   class Logger
  location: class ColocationHelperTest
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/internal/cache/ColocationHelperTest.java:51: error: cannot find symbol
  private Appender mockAppender;
          ^
  symbol:   class Appender
  location: class ColocationHelperTest
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/internal/cache/ColocationHelperTest.java:52: error: cannot find symbol
  private ArgumentCaptor<LogEvent> loggingEventCaptor;
                         ^
  symbol:   class LogEvent
  location: class ColocationHelperTest
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/management/internal/cli/shell/GfshInitFileJUnitTest.java:33: error: package org.apache.logging.log4j.core does not exist
import org.apache.logging.log4j.core.LoggerContext;
                                    ^
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/management/internal/cli/shell/GfshInitFileJUnitTest.java:34: error: package org.apache.logging.log4j.core.config does not exist
import org.apache.logging.log4j.core.config.ConfigurationFactory;
                                           ^
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/management/internal/cli/functions/ShowMissingDiskStoresFunctionJUnitTest.java:36: error: package org.apache.logging.log4j.core does not exist
import org.apache.logging.log4j.core.Appender;
                                    ^
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/management/internal/cli/functions/ShowMissingDiskStoresFunctionJUnitTest.java:37: error: package org.apache.logging.log4j.core does not exist
import org.apache.logging.log4j.core.LogEvent;
                                    ^
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/management/internal/cli/functions/ShowMissingDiskStoresFunctionJUnitTest.java:38: error: package org.apache.logging.log4j.core does not exist
import org.apache.logging.log4j.core.Logger;
                                    ^
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/management/internal/cli/functions/ShowMissingDiskStoresFunctionJUnitTest.java:71: error: cannot find symbol
  private Logger logger;
          ^
  symbol:   class Logger
  location: class ShowMissingDiskStoresFunctionJUnitTest
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/management/internal/cli/functions/ShowMissingDiskStoresFunctionJUnitTest.java:72: error: cannot find symbol
  private Appender mockAppender;
          ^
  symbol:   class Appender
  location: class ShowMissingDiskStoresFunctionJUnitTest
/Users/klund/dev/gemfire/geode/geode-core/src/test/java/org/apache/geode/management/internal/cli/functions/ShowMissingDiskStoresFunctionJUnitTest.java:73: error: cannot find symbol
  private ArgumentCaptor<LogEvent> loggingEventCaptor;
                         ^
  symbol:   class LogEvent
  location: class ShowMissingDiskStoresFunctionJUnitTest
14 errors
{noformat}